--- a/src/App.css
+++ b/src/App.css
@@ -7,8 +7,10 @@
   box-sizing: border-box;
 }
 
+
+
 body {
-  background: #e4e2e9;
+  background: #dfc6d2;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -19,13 +21,13 @@ body {
 }
 
 h1 {
-  color: #e4e2e9;
+  color: #dfc6d2;
   margin-bottom: 0.5rem;
   font-size: 1.75rem;
 }
 
 .TodoWrapper {
-  background: #1A1A40;
+  background: #37193c;
   margin-top: 5rem;
   margin-bottom: 5rem;
   padding: 2rem;
@@ -40,7 +42,7 @@ h1 {
 .todo-input {
   outline: none;
   background: none;
-  border: 1px solid #b8a2f1;
+  border: 1px solid #e8bde6;
   border-radius: 4px 0px 0px 4px;
   padding: 0.5rem 1rem;
   margin-top: 1rem;
@@ -54,7 +56,7 @@ h1 {
 }
 
 .todo-btn {
-  background: #b8a2f1;
+  background: #e8bde6;
   color: #1A1A40;
   border: none;
   padding: 0.55rem;
@@ -66,7 +68,7 @@ h1 {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  background: #b8a2f1;
+  background: #e8bde6;
   color: #1A1A40;
   padding: 0.75rem 1rem;
   border-radius: 5px;
